# olympia

./: .editorconfig  .gitignore  .gitlab-ci.yml  .tarpaulin.toml  Cargo.toml  README.md  run-coverage.sh  test.sh
docs/: GBSPEC.TXT  lr35902-instruction-set.md  mbc-decoder.md
olympia/: Cargo.toml
olympia/src/: main.rs
olympia_cli/: CHANGELOG.md  Cargo.toml  README.md  commands.txt  output.txt
olympia_cli/src/: debug.rs  debugger.rs  disassemble.rs  main.rs
olympia_cli/tests/: debugger.rs  disassembly.rs  tests.rs  utils.rs
olympia_cli/tests/data/: fizzbuzz-disassembled-verbose.txt  fizzbuzz-disassembled.txt
olympia_core/: CHANGELOG.md  Cargo.toml  README.md
olympia_core/src/: address.rs  derive.rs  disasm.rs  instructions.rs  lib.rs  registers.rs
olympia_derive/: CHANGELOG.md  Cargo.toml  README.md
olympia_derive/src/: errors.rs  lib.rs  params.rs
olympia_derive/tests/: basic_instruction.rs  extended_one_inner.rs  inner_and_appended.rs  one_appended_param.rs  one_inner_param.rs  three_params.rs  two_constant_args.rs  two_constant_params.rs
olympia_disassembler/: Cargo.toml  README.md  fizzbuzz-disassembled-verbose.txt
olympia_disassembler/src/: main.rs
olympia_disassembler/tests/: disassembly.rs  tests.rs  utils.rs
olympia_disassembler/tests/data/: fizzbuzz-disassembled-verbose.txt  fizzbuzz-disassembled.txt
olympia_engine/: CHANGELOG.md  Cargo.toml  README.md
olympia_engine/src/: cpu.rs  debug.rs  decoder.rs  disassembler.rs  events.rs  gameboy.rs  gbdebug.rs  instructions.rs  instructionsn.rs  lib.rs  monitor.rs  registers.rs  remote.rs  rom.rs  types.rs
olympia_engine/src/decoder/: idecoders.rs
olympia_engine/src/gameboy/: cpu.rs  dma.rs  memory.rs  ppu.rs  testutils.rs  timer.rs
olympia_engine/src/gameboy/cpu/: alu_tests.rs  extended_opcode_tests.rs  interrupt_tests.rs  jump_tests.rs  load_tests.rs  misc_tests.rs  stack_tests.rs
olympia_engine/src/instructionsn/: alu.rs  alu_tests.rs  disassembly_tests.rs  extended.rs  extended_opcode_tests.rs  interrupt_tests.rs  jump.rs  jump_tests.rs  load.rs  load_tests.rs  misc.rs  misc_tests.rs  stack.rs  stack_tests.rs
olympia_engine/src/remote/: commands.rs  events.rs  loader.rs  remote_emulator.rs
olympia_native/: CHANGELOG.md  Cargo.toml  README.md
olympia_native/res/: address_picker.ui  breakpoints.ui  debugger.glade  debugger.ui  disassembly.ui  memory.ui  menu.ui  registers.ui  style.css  tileset_viewer.ui
olympia_native/src/: builder.rs  emulator.rs  main.rs  screens.rs  utils.rs  widgets.rs
olympia_native/src/emulator/: commands.rs  emu_thread.rs  events.rs  glib.rs  remote.rs
olympia_native/src/screens/: debugger.rs
olympia_native/src/widgets/: address_picker.rs  breakpoint_viewer.rs  common.rs  disassembly_viewer.rs  emulator_display.rs  memory_viewer.rs  playback_controls.rs  register_labels.rs  tileset_viewer.rs
olympia_piston/: Cargo.toml
res/: README.md  fizzbuzz.asm  fizzbuzz.gb  olympia.asm  olympia.gb
src/: main.rs
