[package]
name = "olympia"
version = "0.1.1"
edition = "2018"
authors = [ "Tony Finn <olympia@tonyfinn.com>" ]
description = """
Olympia is a gameboy emulator and toolkit, intended to run
as a native or web assembly application targeting a cycle 
count accurate emulation.  
"""
license = "GPL-3.0-or-later"
readme = "../README.md"
homepage = "https://gitlab.com/tonyfinn/olympia"
repository = "https://gitlab.com/tonyfinn/olympia"
documentation = "https://docs.rs/olympia"

[badges]
gitlab = { repository = "tonyfinn/olympia", branch = "master" }
coveralls = { repository = "tonyfinn/olympia", branch = "master", service = "gitlab" }