[package]
name = "olympia_cli"
version = "0.2.1"
edition = "2018"
authors = [ "Tony Finn <olympia@tonyfinn.com>" ]
description = """
Olympia is a gameboy emulator and toolkit, intended to run
as a native or web assembly application targeting a cycle 
count accurate emulation. olympia_cli contains tools to debug
the olympia emulator and rom files.
"""
license = "GPL-3.0-or-later"
homepage = "https://gitlab.com/tonyfinn/olympia"
repository = "https://gitlab.com/tonyfinn/olympia"
documentation = "https://docs.rs/olympia_cli"
readme = "README.md"
categories = ["emulators"]
autotests = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[badges]
gitlab = { repository = "tonyfinn/olympia", branch = "master" }

[dependencies]
clap = "2.33.0"
derive_more = "0.99.5"
structopt = "0.3.3"
olympia_engine = { version = "0.2.0", path = "../olympia_engine", features = ["disassembler", "std"] }

[[test]]
name = "integration"
path = "tests/tests.rs"