[package]
name = "olympia_derive"
version = "0.4.0"
authors = [ "Tony Finn <olympia@tonyfinn.com>" ]
description = """
Olympia is a gameboy emulator and toolkit, intended to run
as a native or web assembly application targeting a cycle 
count accurate emulation. olympia_derive provides a couple
of proc macros used for olympia implementation.
"""
license = "GPL-3.0-or-later"
readme = "README.md"
homepage = "https://gitlab.com/tonyfinn/olympia"
repository = "https://gitlab.com/tonyfinn/olympia"
documentation = "https://docs.rs/olympia_derive"
edition = "2018"

[badges]
gitlab = { repository = "tonyfinn/olympia", branch = "master" }

[lib]
proc-macro = true

[dependencies]
derive_more = "0.99.5"
proc-macro2 = "1.0"
quote = "1.0.2"
syn = {version = "1.0.11", features = ["extra-traits", "full"]}
olympia_core = { version = "0.4.0", path = "../olympia_core" }

[dev-dependencies]
runtime-macros-derive = "0.5.0"
