[package]
name = "olympia_disassembler"
version = "0.1.1"
edition = "2018"
authors = [ "Tony Finn <olympia@tonyfinn.com>" ]
description = """
(DEPRECATED) Replaced by `olympia_cli disassemble`

Olympia is a gameboy emulator and toolkit, intended to run
as a native or web assembly application targeting a cycle 
count accurate emulation. olympia_disassembler is a CLI
app to disassemble a GB ROM.
"""
license = "GPL-3.0-or-later"
homepage = "https://gitlab.com/tonyfinn/olympia"
repository = "https://gitlab.com/tonyfinn/olympia"
documentation = "https://docs.rs/olympia_disassembler"
readme = "README.md"
autotests = false
categories = ["emulators"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
structopt = "0.3.3"
olympia_engine = { version = "0.1.0", path = "../olympia_engine", features = ["disassembler"] }

[[test]]
name = "integration"
path = "tests/tests.rs"