[package]
name = "olympia_engine"
version = "0.2.0"
edition = "2018"
authors = [ "Tony Finn <olympia@tonyfinn.com>" ]
description = """
Olympia is a gameboy emulator and toolkit, intended to run
as a native or web assembly application targeting a cycle 
count accurate emulation. olympia_engine is the reusable
core for both native and wasm.
"""
license = "GPL-3.0-or-later"
readme = "README.md"
homepage = "https://gitlab.com/tonyfinn/olympia"
repository = "https://gitlab.com/tonyfinn/olympia"
documentation = "https://docs.rs/olympia_engine"
categories = ["emulators", "no-std"]

[badges]
gitlab = { repository = "tonyfinn/olympia", branch = "master" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["disassembler"]
disassembler = []
std = []

[dependencies]
derive_more = "0.99.5"
olympia_core = { version = "0.1.0", path = "../olympia_core" }
olympia_derive = { version = "0.1.0", path = "../olympia_derive" }