[package]
name = "olympia_native"
version = "0.1.0"
authors = [ "Tony Finn <olympia@tonyfinn.com>" ]
description = """
Olympia is a gameboy emulator and toolkit, intended to run
as a native or web assembly application targeting a cycle 
count accurate emulation. olympia_native is the WIP native UI
"""
edition = "2018"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pixels = "0.0.2"
olympia_engine = { version = "0.2.0", path = "../olympia_engine", features = ["std"] }
winit = "0.20.0-alpha4"

[dependencies.gdk]
version = "0.12.0"
features = ["v3_22"]

[dependencies.gtk]
version = "0.8.0"
features = ["v3_22"]

[dependencies.gio]
version = "0.8.0"
features = ["v2_44"]