[package]
name = "olympia_native"
version = "0.1.0"
authors = [ "Tony Finn <olympia@tonyfinn.com>" ]
description = """
Olympia is a gameboy emulator and toolkit, intended to run
as a native or web assembly application targeting a cycle 
count accurate emulation. olympia_native is the WIP native UI
"""
edition = "2018"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = "0.99.2"
olympia_engine = { version = "0.2.0", path = "../olympia_engine", features = ["std"] }
thiserror = "1.0.9"

[dependencies.gdk]
version = "0.12.0"
features = ["v3_22"]

[dependencies.gtk]
version = "0.8.0"
features = ["v3_22"]

[dependencies.glib]
version = "0.9.0"
features = ["v2_56"]

[dependencies.gio]
version = "0.8.0"
features = ["v2_56"]

[dependencies.pango]
version = "0.8.0"
features = ["v1_40"]